<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoiceTasker</string>
    <string name="action_settings">Settings</string>
	<string name="new_list">New\nList</string>
	<string name="show_lists">Show\nLists</string>
	<string name="new_wish_list">New Wish List</string>
	<string name="delete_list">Delete List</string>
	<string name="exit">Exit</string>
	<string name="back">Back</string>
	<string name="speak">Speak</string>
	<string name="add">Add Item</string>
	<string name="reset">Reset List</string>
	<string name="save">Save List</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="enter_comment">Please provide list name</string>
	<string name="title">Save current list</string>
	<string name="shopping_list">Shopping List</string>
	<string name="simple_list">Simple Voice List</string>
	<string name="total">TOTAL : </string>
	<string name="budget">BUDGET : </string>
	<string name="savedlists">Saved Lists</string>
	<color name="Blue">#70130180</color>
	<string name="blank"/>
	<string name="simple_lists">Simple Lists</string>
	<string name="shopping_lists">Shopping Lists</string>
	<color name="lemon">#FFD39B</color>
	<color name="khaki">#FFF68F</color>
	<string name="editBudget">Edit \n Budget</string>
	<string name="titleBudget">Edit Budget</string>
	<string name="commentBudget">Please set new budget</string>
	<color name="lemon_ciffon">#FFF8C6</color>
	<color name="vanilla">#F3E5AB</color>
	<color name="sandstone">#786D5F</color>
	<color name="pearl">#FDEEF4</color>
	<color name="burlywood">#DEB887</color>
	<string name="mysavedsimple">My Simple Lists</string>
	<string name="mysavedshopping">My Shopping Lists</string>	
	
</resources>
