<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/lemon_ciffon" >

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnReset"
        android:layout_below="@+id/btnSpeak"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnSpeak"
        android:text="@string/save"
        android:background="@drawable/red_button"
        style="@style/button_text" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnSpeak"
        android:text="@string/reset"
        android:background="@drawable/red_button"
        style="@style/button_text" />

    <Button
        android:id="@+id/btnSpeak"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="17dp"
        android:drawableRight="@drawable/microphone2"
        android:text="@string/add"
        android:background="@drawable/red_button"
        style="@style/button_text" />

</RelativeLayout>